Updated styles and added map for contact page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About Me</h1>
+<hr>
+<p>I have worked in the television programming/production/ratings industry for the last 10 years.
+I earned my Bachelors degree in Mass Communications from the University of South Florida in Tampa, FL. 
+I have always been fascinated by the "magic" of web development, so I decided to dive in and try
+to obtain these skills to stregthen and broaden my portfolio.</p>
