Implemented index styles for blogs

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -21,8 +21,9 @@
       <!-- Start of blog header -->
       <div class="blog-header">
         <div class="container">
-          <h1 class="blog-title">The Bootstrap Blog</h1>
+          <h1 class="blog-title">My Blog</h1>
           <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+          <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
         </div>
       </div>
      <!-- End of blog header -->
@@ -32,8 +33,6 @@
       
       <div class="row"
           
-       
-        
         <%= yield %>
         <>
         <aside class="col-sm-3 ml-sm-auto blog-sidebar">
@@ -67,6 +66,7 @@
             </ol>
           </div>
         </aside><!-- /.blog-sidebar -->
+      </div>
         
         <!-- start of footer -->
          <footer class="blog-footer">
@@ -77,10 +77,8 @@
         </footer>
         <!-- end of footer -->
           
-        <%= render "shared/nav", location: 'bottom' %>
         
         <%= source_helper("blog") %>
-      </div>
     </div>
   </body>
 </html>
