Updated images for about me page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,17 @@
 <h1>About Me</h1>
+
 <hr>
-<p>I have worked in the television programming/production/ratings industry for the last 10 years.
-I earned my Bachelors degree in Mass Communications from the University of South Florida in Tampa, FL. 
-I have always been fascinated by the "magic" of web development, so I decided to dive in and try
-to obtain these skills to stregthen and broaden my portfolio.</p>
+
+<div class="row">
+    <div class="col-md-4">
+        <%= image_tag "profile.jpg", width: 300, alt: "Profile Image" %>
+    </div>
+    
+    <div class="col-md-8">
+        <p>I have worked in the television programming/production/ratings industry for the last 10 years.
+        I earned my Bachelors degree in Mass Communications from the University of South Florida in Tampa, FL. 
+        I have always been fascinated by the "magic" of web development, so I decided to dive in and try
+        to obtain these skills to stregthen and broaden my portfolio.</p>
+    </div>
+</div>
+
