--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,16 @@
       <div class="site-wrapper-inner">
         <div class="cover-container">
           
-          <div id="background"></div>
-   
+          <%= video_tag(
+              'feather.mp4',
+              id: 'background',
+              autoplay: true,
+              loop: true,
+              muted: true,
+              poster: 'feather.png'
+            )
+            %>
+          
           <%= render "shared/application_nav" %>
           
           <%= yield %>
