Implemented markdown for blog posts

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,7 +3,7 @@
       <div class="card-block">
         <div class="row">
           <div class="col-md-2">
-            <%= gravar_helper comment.user %>
+            <%= gravatar_helper comment.user %>
           </div>
           
           <div class="col-md-10">
