--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -13,8 +13,7 @@
     <%= f.label :topic_id %>
     <%= f.collection_select(:topic_id, Topic.all, :id, :title,
                               {
-                                selected: blog.topic,
-                                include_blank: true
+                                selected: blog.topic.id
                               },
                               class: 'form-control'
                             )
