Updated source tracking feature

--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -4,7 +4,9 @@
     <p>I am just beginning my <em>Web Development</em> journey, and I am extremely excited about my future on this path.</p>
   </div>
   
- 
+  <%= source_helper("alert alert-info blog-sidebar-source") %>
+   
+       
   
   <div class="sidebar-module">
     <h4>Topics</h4>
