--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -222,8 +222,19 @@ body {
   padding: 10px;
 }
 
+.app-card-container {
+  color: black;
+  text-align: left;
+}
 
+.app-card-containe > .card {
+  padding: 40px;
+}
 
+.profile-img {
+  border: 1px solid grey;
+}
 
-
-
+.app-card-container a {
+  color: blue;
+}
