--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,25 +1,29 @@
-<h1>Contact Me</h1>
-
-<hr>
-
-<div class="row">
-  <div class="col-md-6">
-    <p>Clearwater, FL</p>
+<div class="app-card-container">
+  <div class="card">
+    <h1>Contact Me</h1>
     
-    <p><%= number_to_phone "813-317-7755" %></p>
+    <hr>
     
-    <p><a href="mailto:bgordon@mail.usf.edu?subject=PortfolioContact" "email me">Email Me</a></p>
+    <div class="row">
+      <div class="col-md-6">
+        <p>Clearwater, FL</p>
+        
+        <p><%= number_to_phone "813-317-7755" %></p>
+        
+        <p><a href="mailto:bgordon@mail.usf.edu?subject=PortfolioContact" "email me">Email Me</a></p>
+        
+      </div>
     
-  </div>
-
-
-  <div class="col-md-6">
-
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3525.
-    9958106249587!2d-82.72806848505009!3d27.90210188271171!2m3!1f0!2f0!3f0!3
-    m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88c2e54f0f8af86d%3A0x6a04843fdf075949
-    !2s6465+142nd+Ave+N+y201%2C+Clearwater%2C+FL+33760!5e0!3m2!1sen!2sus!4v1
-    510602370743"width="450" height="450" frameborder="0" style="border:0" 
-    allowfullscreen></iframe>
+    
+      <div class="col-md-6">
+    
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3525.
+        9958106249587!2d-82.72806848505009!3d27.90210188271171!2m3!1f0!2f0!3f0!3
+        m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88c2e54f0f8af86d%3A0x6a04843fdf075949
+        !2s6465+142nd+Ave+N+y201%2C+Clearwater%2C+FL+33760!5e0!3m2!1sen!2sus!4v1
+        510602370743"width="450" height="450" frameborder="0" style="border:0" 
+        allowfullscreen></iframe>
+      </div>
+    </div>
   </div>
 </div>
