--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -14,6 +14,54 @@
             I earned my Bachelors degree in Mass Communications from the University of South Florida in Tampa, FL. 
             I have always been fascinated by the "magic" of web development, so I decided to dive in and try
             to obtain these skills to stregthen and broaden my portfolio.</p>
+            
+            <p>
+              <button
+                class="btn btn-primary"
+                type="button"
+                data-toggle="collapse"
+                data-target="#jobHistory"
+                aria-expanded="false"
+                aria-controler="jobHistory"
+              >
+                Job History
+              </button>
+            </p>
+            
+            <p>
+              <button
+                class="btn btn-primary"
+                type="button"
+                data-toggle="collapse"
+                data-target="#education"
+                aria-expanded="false"
+                aria-controler="education"
+              >
+               Education
+              </button>
+            </p>
+            
+            <p>
+              <div class="collapse" id="jobHistory">
+                  <div class="card card-block">
+                      JOB1
+                  </div>
+                  <div class="card card-block">
+                      JOB2
+                  </div>
+              </div>
+            </p>
+            
+            <p>
+              <div class="collapse" id="education">
+                  <div class="card card-block">
+                      SCHOOL1
+                  </div>
+                  <div class="card card-block">
+                      SCHOOL2
+                  </div>
+              </div>
+            </p>
         </div>
     </div>
   </div>
