--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -11,13 +11,7 @@
   
   <div class="form-group">
     <%= f.label :topic_id %>
-    <%= f.collection_select(:topic_id, Topic.all, :id, :title,
-                              {
-                                selected: blog.topic.id
-                              },
-                              class: 'form-control'
-                            )
-    %>
+    <%= f.collection_select(:topic_id, Topic.all, :id, :title, class: 'form-control')%>
    </div>
     
   <div class="form-group">
