Implemented the typed.js library

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
 <main role="main" class="inner cover">
   <h1 class="cover-heading">Welcome To My Website</h1>
-  <p class="lead">I am just beginning my Web Development journey, and I am extremely excited about my future on this path.</p>
+  <p class="lead">
+    <span class="element"></span>
+  </p>
   <p class="lead">
     <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary" %>
   </p>
