Updated home page text and job history and eduction on about me page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -64,10 +64,7 @@
             <p>
               <div class="collapse" id="jobHistory">
                   <div class="card card-block">
-                      JOB1
-                  </div>
-                  <div class="card card-block">
-                      JOB2
+                      <a href="https://www.linkedin.com/in/brandon-gordon-186684a/">LinkedIn</a>
                   </div>
               </div>
             </p>
@@ -75,10 +72,7 @@
             <p>
               <div class="collapse" id="education">
                   <div class="card card-block">
-                      SCHOOL1
-                  </div>
-                  <div class="card card-block">
-                      SCHOOL2
+                      B.A. in Mass Communications from the University of South Florida in Tampa, FL
                   </div>
               </div>
             </p>
