--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -6,23 +6,21 @@
     
     <div class="row">
       <div class="col-md-6">
-        <p>Clearwater, FL</p>
+        <p>Tampa, FL</p>
         
-        <p><%= number_to_phone "813-317-7755" %></p>
+        <p><%= number_to_phone "555-555-5555" %></p>
         
-        <p><a href="mailto:bgordon@mail.usf.edu?subject=PortfolioContact" "email me">Email Me</a></p>
+        <p><a href="mailto:####" "email me">Email Me</a></p>
         
       </div>
     
     
       <div class="col-md-6">
-    
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3525.
-        9958106249587!2d-82.72806848505009!3d27.90210188271171!2m3!1f0!2f0!3f0!3
-        m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88c2e54f0f8af86d%3A0x6a04843fdf075949
-        !2s6465+142nd+Ave+N+y201%2C+Clearwater%2C+FL+33760!5e0!3m2!1sen!2sus!4v1
-        510602370743"width="450" height="450" frameborder="0" style="border:0" 
-        allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d188234.
+        50107523188!2d-82.63540428699046!3d27.993937320783125!2m3!1f0!2f0!3f0!3m2!
+        1i1024!2i768!4f13.1!3m3!1m2!1s0x88c2b782b3b9d1e1%3A0xa75f1389af96b463!2sTampa
+        %2C+FL!5e0!3m2!1sen!2sus!4v1515293605842" 
+        width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
     </div>
   </div>
